1.1
Edit easing curve for transition
Font of text objects is now editable
News panel added
Timeline is not limited anymore
Item resizing while shift key pressed centers the item
Playhead can now be repositioned clicking into the new position
Playhead scale has now labels every half a second
Bugfix changing Id
Bugfix changing opacity
Scene or single items can now be exported to XML
Scene and single items can now be imported from XML