@@ -13,5 +13,6 @@ ScrollArea for PropertyPanel
 
 Scene Zoom, Minimum size of 20x20 not needed anymore if zoom is implemented
 
-Selecting more than on item at a time
+Selecting more than on item at a time via mousemove
 
+delete for all selected items
